2020/4/6  HPにアニメーションを追加

--- a/テストhtml/assets/css/style.css
+++ b/テストhtml/assets/css/style.css
@@ -19,8 +19,48 @@ header .left-box {
 
 header .menu-bar {
     /* background-color: red; */
-    width: 50%;
-    height: 40px;
+    width: 90%;
+    height: 80px;
+}
+
+.menu-bar ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    height: 65px;
+}
+
+.menu-bar a {
+    color: black;
+    text-decoration: none;
+}
+
+.underline {
+    position: relative;
+    padding-bottom: 4px;
+}
+
+.underline::after {
+    display: block;
+    height: 2px;
+    width: 0;
+    border-radius: 10%;
+    background-color: tomato;
+    content: "";
+    position: absolute;
+    left: 0;
+    /* right: 0; */
+    bottom: 0;
+    transition: .5s all;
+}
+
+.underline:hover::after {
+    width: 100%;
+}
+
+.menu-bar li {
+    font-size: 20px;
+    font-family: serif;
 }
 
 main {
@@ -42,6 +82,12 @@ main h1 {
     background: linear-gradient(transparent 70%, yellow 70%);
 }
 
+main h1 span {
+    color: rgb(63, 63, 63);
+    font-size: 75px;
+    font-family: initial;
+}
+
 main h2 {
     width: 10%;
     color: black;
@@ -56,14 +102,58 @@ main h2 {
 
 main .vioret-box {
     width: 70%;
-    height: 100vh;
+    height: 80%;
     background-color: rgb(216, 165, 216);
     position: absolute;
 }
 
+main .white-box {
+    width: 30%;
+    height: 80%;
+    background-color: whitesmoke;
+    position: absolute;
+    left: 70%;
+}
+
+.white-box .bar1 {
+    background-color: rgb(199, 199, 199);
+    width: 0;
+    height: 25%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.white-box .bar2 {
+    background-color: wheat;
+    width: 0;
+    height: 25%;
+    position: absolute;
+    right: 0;
+    top: 25%;
+}
+
+.white-box .bar3 {
+    background-color: rgb(199, 199, 199);
+    width: 0;
+    height: 25%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+}
+
+.white-box .bar4 {
+    background-color: wheat;
+    width: 0;
+    height: 25%;
+    position: absolute;
+    right: 0;
+    top: 75%;
+}
+
 main .green-box {
     width: 80%;
-    height: 20vh;
+    height: 15%;
     background-color: rgb(223, 253, 174);
     position: absolute;
     top: 80%;
@@ -71,7 +161,7 @@ main .green-box {
 
 main .gray-box {
     width: 40%;
-    height: 20vh;
+    height: 15%;
     background-color: rgb(236, 236, 236);
     position: absolute;
     top: 80%;
@@ -79,11 +169,11 @@ main .gray-box {
 }
 
 main .topic {
-    background-color: white;
+    background-color: whitesmoke;
     width: 40%;
     height: 500px;
     position: absolute;
-    /* z-index: 999; */
+    z-index: 999;
     top: 10%;
     left: 12%;
 }
