スクロール値の微調整 fontawesomeの追加

--- a/テストhtml/assets/css/style.css
+++ b/テストhtml/assets/css/style.css
@@ -63,6 +63,10 @@ header .menu-bar {
     font-family: serif;
 }
 
+.menu-bar i {
+    color: gray;
+}
+
 main {
     background-color: white;
     height: 100vh;
