--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -1,14 +1,293 @@
 @charset "UTF-8";
-#index {
-    header {
-        width: 100%;
-        background-color: gray;
-        height: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: white;
-        font-size: 50px;
-        font-weight: 900;
-    }
+header {
+    margin-bottom: 50x;
+    /* padding-left: 30px; */
+    border: solid 2px rgb(211, 211, 211);
+    display: flex;
+}
+
+header .left-box {
+    border-right: solid 2px rgb(211, 211, 211);
+    padding: 30px;
+    text-decoration: none;
+}
+
+.left-box h1 {
+    font-family: serif;
+    color: black;
+    /* font-size: 10px; */
+}
+
+header .menu-bar {
+    width: 90%;
+    height: 80px;
+    // font-size: 10px;
+}
+
+.menu-bar ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    height: 65px;
+}
+
+.menu-bar a {
+    color: black;
+    text-decoration: none;
+}
+
+.underline {
+    position: relative;
+    padding-bottom: 4px;
+}
+
+.underline::after {
+    display: block;
+    height: 2px;
+    width: 0;
+    border-radius: 10%;
+    background-color: tomato;
+    content: "";
+    position: absolute;
+    left: 0;
+    /* right: 0; */
+    bottom: 0;
+    transition: .5s all;
+}
+
+.underline:hover::after {
+    width: 100%;
+}
+
+.menu-bar li {
+    font-size: 20px;
+    font-family: serif;
+}
+
+.menu-bar i {
+    color: gray;
+}
+
+.right-box {
+    width: 58px;
+    height: 60px;
+    /* background-color: whitesmoke; */
+    position: absolute;
+    right: 2%;
+    top: 10px;
+    cursor: pointer;
+}
+
+.right-box span:nth-child(1) {
+    position: absolute;
+    top: 25%;
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: all 0.3s;
+}
+
+.right-box span:nth-child(2) {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: all 0.3s;
+}
+
+.right-box span:nth-child(3) {
+    position: absolute;
+    top: 75%;
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: all 0.3s;
+}
+
+.clicked:nth-child(1) {
+    transform: rotate(45deg);
+    transition: all 0.3s;
+    margin-top: 50%;
+}
+
+.clicked:nth-child(2) {
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.clicked:nth-child(3) {
+    transform: rotate(-45deg);
+    transition: all 0.3s;
+}
+
+.side-menu {
+    height: 100vh;
+    width: 30%;
+    position: fixed;
+    left: -400px;
+    transition: all 0.3s;
+}
+
+.clicked .side-menu {
+    left: 8px;
+}
+
+main {
+    background-color: white;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+main h1 {
+    width: 30%;
+    color: black;
+    position: absolute;
+    top: 30%;
+    left: 60%;
+    font-size: 70px;
+    z-index: 999;
+    font-family: serif;
+    background: linear-gradient(transparent 70%, yellow 70%);
+}
+
+main h1 span {
+    color: rgb(63, 63, 63);
+    font-size: 75px;
+    font-family: initial;
+}
+
+main h2 {
+    width: 10%;
+    color: black;
+    position: absolute;
+    top: 40%;
+    left: 75%;
+    font-size: 70px;
+    z-index: 999;
+    font-family: serif;
+    background: linear-gradient(transparent 70%, yellow 70%);
+}
+
+main .vioret-box {
+    width: 70%;
+    height: 80%;
+    background-color: rgb(216, 165, 216);
+    position: absolute;
+}
+
+main .white-box {
+    width: 30%;
+    height: 80%;
+    background-color: whitesmoke;
+    position: absolute;
+    left: 70%;
+}
+
+.white-box .bar1 {
+    background-color: rgb(199, 199, 199);
+    width: 0;
+    height: 25%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.white-box .bar2 {
+    background-color: wheat;
+    width: 0;
+    height: 25%;
+    position: absolute;
+    right: 0;
+    top: 25%;
+}
+
+.white-box .bar3 {
+    background-color: rgb(199, 199, 199);
+    width: 0;
+    height: 25%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+}
+
+.white-box .bar4 {
+    background-color: wheat;
+    width: 0;
+    height: 25%;
+    position: absolute;
+    right: 0;
+    top: 75%;
+}
+
+main .green-box {
+    width: 80%;
+    height: 15%;
+    background-color: rgb(223, 253, 174);
+    position: absolute;
+    top: 80%;
+}
+
+main .gray-box {
+    width: 40%;
+    height: 15%;
+    background-color: rgb(236, 236, 236);
+    position: absolute;
+    top: 80%;
+    left: 60%;
+}
+
+.gray-box img {
+    width: 100%;
+    height: 100%;
+}
+
+main .topic {
+    background-color: whitesmoke;
+    width: 40%;
+    height: 500px;
+    position: absolute;
+    z-index: 999;
+    top: 10%;
+    left: 12%;
+}
+
+.articles {
+    border: solid 2px whitesmoke;
+    width: 70%;
+    margin: 0 auto;
+}
+
+article {
+    height: 1000px;
+    /* background-color: whitesmoke; */
+}
+
+article p {
+    font-size: 18px;
+    font-family: serif;
+    // margin-left: 30px;
+}
+
+article h2 {
+    font-size: 40px;
+    margin: 30px;
+    padding-bottom: 10px;
+    border-bottom: solid 5px tomato;
+    font-family: serif;
+}
+
+.note {
+    width: 80%;
+    height: 800px;
+    padding: 0 1em;
+    background: linear-gradient(#ccc 1px, transparent 1px) #fffef7;
+    background-size: auto 2.5em;
+    line-height: 2.5em;
+    border-bottom: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    overflow: hidden;
+    margin: 30px auto;
 }
