--- a/テストhtml/assets/css/style.css
+++ b/テストhtml/assets/css/style.css
@@ -15,6 +15,7 @@ header .left-box {
 .left-box h1 {
     font-family: serif;
     color: black;
+    /* font-size: 10px; */
 }
 
 header .menu-bar {
@@ -65,6 +66,71 @@ header .menu-bar {
 
 .menu-bar i {
     color: gray;
+}
+
+.right-box {
+    width: 58px;
+    height: 60px;
+    /* background-color: whitesmoke; */
+    position: absolute;
+    right: 2%;
+    top: 10px;
+    cursor: pointer;
+}
+
+.right-box span:nth-child(1) {
+    position: absolute;
+    top: 25%;
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: all 0.3s;
+}
+
+.right-box span:nth-child(2) {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: all 0.3s;
+}
+
+.right-box span:nth-child(3) {
+    position: absolute;
+    top: 75%;
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: all 0.3s;
+}
+
+.clicked:nth-child(1) {
+    transform: rotate(45deg);
+    transition: all 0.3s;
+    margin-top: 50%;
+}
+
+.clicked:nth-child(2) {
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.clicked:nth-child(3) {
+    transform: rotate(-45deg);
+    transition: all 0.3s;
+}
+
+.side-menu {
+    height: 100vh;
+    width: 30%;
+    position: fixed;
+    left: -400px;
+    transition: all 0.3s;
+}
+
+.clicked .side-menu {
+    left: 8px;
 }
 
 main {
@@ -172,6 +238,11 @@ main .gray-box {
     left: 60%;
 }
 
+.gray-box img {
+    width: 100%;
+    height: 100%;
+}
+
 main .topic {
     background-color: whitesmoke;
     width: 40%;
@@ -193,10 +264,30 @@ article {
     /* background-color: whitesmoke; */
 }
 
+article p {
+    font-size: 18px;
+    font-family: serif;
+    margin-left: 30px;
+}
+
 article h2 {
     font-size: 40px;
     margin: 30px;
     padding-bottom: 10px;
     border-bottom: solid 5px tomato;
     font-family: serif;
+}
+
+.note {
+    width: 80%;
+    height: 800px;
+    padding: 0 1em;
+    background: linear-gradient(#ccc 1px, transparent 1px) #fffef7;
+    background-size: auto 2.5em;
+    line-height: 2.5em;
+    border-bottom: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    overflow: hidden;
+    margin: 30px auto;
 }
