--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,11 +59,16 @@ table {
 .fangsong {
   font-family: fangsong; }
 
+#index {
+  width: 100%;
+  overflow: hidden; }
+
 header {
   margin-bottom: 50x;
   /* padding-left: 30px; */
   border: solid 2px lightgray;
-  display: flex; }
+  display: flex;
+  width: 100%; }
 
 header .left-box {
   border-right: solid 2px lightgray;
@@ -271,12 +276,43 @@ main .gray-box {
 
 main .topic {
   background-color: whitesmoke;
-  width: 40%;
-  height: 500px;
+  width: 45%;
+  height: 400px;
   position: absolute;
-  z-index: 999;
-  top: 10%;
-  left: 12%; }
+  top: 15%;
+  left: 12%;
+  display: flex;
+  flex-wrap: wrap; }
+
+main .topic img {
+  width: 100%; }
+
+.topic-box:nth-child(1) {
+  width: 50%;
+  height: 50%;
+  overflow: hidden; }
+
+.topic-box:nth-child(1) img {
+  width: 100%;
+  height: 100%; }
+
+.topic-box:nth-child(2) {
+  width: 50%;
+  height: 50%; }
+
+.topic-box:nth-child(2) img {
+  width: 100%;
+  height: 100%; }
+
+.topic-box:nth-child(3) {
+  background-color: yellow;
+  width: 50%;
+  height: 50%; }
+
+.topic-box:nth-child(4) {
+  background-color: blue;
+  width: 50%;
+  height: 50%; }
 
 .articles {
   border: solid 2px whitesmoke;
@@ -310,5 +346,12 @@ article h2 {
   border-right: 1px solid #ccc;
   overflow: hidden;
   margin: 30px auto; }
+
+.note a {
+  text-decoration: none;
+  color: black; }
+
+.note a:hover {
+  color: tomato; }
 
 /*# sourceMappingURL=style.css.map */
