--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -1,15 +1,22 @@
 @charset "UTF-8";
+#index {
+    width: 100%;
+    overflow: hidden;
+}
+
 header {
     margin-bottom: 50x;
     /* padding-left: 30px; */
     border: solid 2px rgb(211, 211, 211);
     display: flex;
+    width: 100%;
 }
 
 header .left-box {
     border-right: solid 2px rgb(211, 211, 211);
     padding: 30px;
     text-decoration: none;
+    // width: 10%;
 }
 
 .left-box h1 {
@@ -245,12 +252,55 @@ main .gray-box {
 
 main .topic {
     background-color: whitesmoke;
-    width: 40%;
-    height: 500px;
+    width: 45%;
+    height: 400px;
     position: absolute;
-    z-index: 999;
-    top: 10%;
+    // z-index: 999;
+    top: 15%;
     left: 12%;
+    display: flex;
+    flex-wrap: wrap;
+    img {
+        width: 100%;
+        // height: 100%;
+    }
+}
+
+.topic-box:nth-child(1) {
+    // background-color: red;
+    width: 50%;
+    height: 50%;
+    // border-radius: 100%;
+    img {
+        width: 100%;
+        height: 100%;
+    }
+    overflow:hidden;
+}
+
+.topic-box:nth-child(2) {
+    // background-color: green;
+    width: 50%;
+    height: 50%;
+    // border-radius: 100%;
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.topic-box:nth-child(3) {
+    background-color: yellow;
+    width: 50%;
+    height: 50%;
+    // border-radius: 100%;
+}
+
+.topic-box:nth-child(4) {
+    background-color: blue;
+    width: 50%;
+    height: 50%;
+    // border-radius: 100%;
 }
 
 .articles {
@@ -290,4 +340,11 @@ article h2 {
     border-right: 1px solid #ccc;
     overflow: hidden;
     margin: 30px auto;
+    a {
+        text-decoration: none;
+        color: black;
+    }
+    a:hover {
+        color: tomato;
+    }
 }
